Add tooltip to open in editor/pager for scripts

--- a/src/posting/posting.scss
+++ b/src/posting/posting.scss
@@ -12,6 +12,11 @@
   }
 }
 
+Tooltip {
+  background: $surface-darken-1;
+  border-left: wide $accent;
+}
+
 AutoComplete {
   border-left: wide $accent;
   background: $surface;
