--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -33,6 +33,12 @@ table {
     border: 1px solid hsl(287deg 100% 30%) !important;
 }
 
+span.filename {
+    background: hsla(287deg, 100%, 10%, 0.4) !important;
+    border: 1px solid hsl(287deg 100% 30%) !important;
+    border-bottom: none !important;
+    color: hsla(286, 42%, 73%, 0.526) !important;
+}
 
 .md-nav__link {
     background-color: transparent !important;
@@ -105,6 +111,7 @@ nav.md-tabs {
 }
 .md-content {
     background-color: rgba(0,0,0,0);
+    padding-bottom: 2.5rem;
 }
 .md-nav__title {
     box-shadow: none !important;
