Theme fixes, redo nebula theme

--- a/src/posting/posting.scss
+++ b/src/posting/posting.scss
@@ -257,7 +257,10 @@ RequestEditor {
 }
 
 RequestBodyTextArea {
-  color: $foreground;
+  background: transparent;
+}
+
+ResponseTextArea {
   background: transparent;
 }
 
