--- a/src/posting/posting.scss
+++ b/src/posting/posting.scss
@@ -191,8 +191,37 @@ SendRequestButton {
   color: $text-accent;
   text-style: b;
   &:hover {
+      background-tint: $text-accent 10%;
+  }
+}
+
+KeyValueInput {
+  height: auto;
+  width: 1fr;
+  & > Input {
+      border: none;
+      width: 1fr;
+      margin-left: 1;
+      margin-right: 1;
+      &:focus {
+          border: none;
+          padding: 0 1;
+      }
+  }
+
+  & > Button {
+      background: $primary;
       color: $text;
-      background: $primary-darken-1;
+      text-style: none;
+      min-width: 0;
+      width: 7;
+      margin: 0 1;
+      &:hover {
+          text-style: b;
+          padding: 0 1;
+          border: none;
+          background: $primary-darken-1;
+      }
   }
 }
 
@@ -303,13 +332,13 @@ TextAreaFooter {
 
   #mode-label {
       dock: left;
-      color: $text;
       padding: 0 1;
       display: none;
       margin-left: 1;
       &.visual-mode {
-          background: $secondary;
-          display: block;
+        color: $text-accent;
+        background: $accent-muted;
+        display: block;
       }
   }
 
