--- a/src/posting/posting.scss
+++ b/src/posting/posting.scss
@@ -61,11 +61,11 @@ HelpPanel {
 
 .section {
   border: round $border 40%;
-  border-title-color: $text-accent 50%;
+  border-title-color: $text-secondary 50%;
   border-title-align: right;
 
   &:focus-within {
-    border: round $border 100%;
+    border: round $accent 100%;
     border-title-color: $foreground;
     border-title-style: b;
   }
@@ -361,6 +361,10 @@ RequestBodyTextArea {
 }
 
 ResponseTextArea {
+  background: transparent;
+}
+
+MessageEditor PostingTextArea {
   background: transparent;
 }
 
