Displaying reply count

--- a/src/posting/posting.scss
+++ b/src/posting/posting.scss
@@ -119,12 +119,16 @@ AppBody {
   }
 }
 
-WebsocketComposer {
+WebSocketContainer {
 
   & MessageEditor {
   }
 
   & Replies {
+
+    & RichLog#replies-rich-log {
+      background: transparent;
+    }
   }
 }
 
