--- a/src/posting/posting.scss
+++ b/src/posting/posting.scss
@@ -126,6 +126,10 @@ WebSocketContainer {
 
   & Replies {
 
+    &:focus-within {
+      scrollbar-color: $primary 55%;
+    }
+
     & RichLog#replies-rich-log {
       background: transparent;
     }
@@ -136,7 +140,8 @@ WebSocketContainer {
     & .reply-header {
       height: 1;
       color: $text-disabled;
-      background: $panel;
+      background: $surface;
+      padding: 0 1;
     }
     & .reply-label {
       dock: left;
@@ -145,11 +150,44 @@ WebSocketContainer {
       dock: right;
     }
 
-    & .reply-text-area {
+    & #reply-text-area {
       height: auto;
       min-height: 1;
       max-height: 100%;
       background: transparent;
+      &:blur .text-area--cursor-line {
+        background: transparent;
+      }
+      &:focus {
+        tint: $block-cursor-background 10%;
+      }
+    }
+
+    &:focus-within .reply-header {
+      color: $text-primary;
+      background: $primary-muted;
+      text-style: b;
+    }
+
+  }
+
+  RepliesFooter {
+    dock: bottom;
+    height: 1;
+    
+    & Label {
+      margin: 0 1;
+      padding: 0 1;
+    }
+
+    & Label.on {
+      color: $text-success;
+      background: $success-muted;
+    }
+
+    & Label.off {
+      color: $text-error;
+      background: $error-muted;
     }
   }
 }
