--- a/src/posting/posting.scss
+++ b/src/posting/posting.scss
@@ -12,7 +12,7 @@
   }
 }
 
-Screen {
+Posting {
   &.-compact {
     & AppHeader {
       padding: 0 1;
@@ -68,6 +68,11 @@ Screen {
     
     & ResponseArea {
       background: $surface 10%;
+    }
+
+    & .textual-jump-label {
+      padding: 0;
+      margin-top: 1;
     }
 
   }
