--- a/src/posting/posting.scss
+++ b/src/posting/posting.scss
@@ -442,44 +442,60 @@ SendRequestButton {
   color: $text-accent;
   text-style: b;
   &:hover {
-      background-tint: $text-accent 10%;
+    background-tint: $text-accent 10%;
   }
 }
 
 KeyValueEditor {
   KeyValueInput {
+    dock: bottom;
+    height: auto;
+    width: 1fr;
+
+    #editing-row-label {
+      display: none;
+      padding: 0 1;
+      height: 1;
+      color: $text-accent;
+      background: $accent-muted;
+    }
+    #key-value-inputs {
+      height: 1;
+    }
+    #row-writer-footer {
+      height: auto;
+    }
     &.edit-mode {
         background: $accent-muted;
+        #editing-row-label {
+          display: block;
+        }
         #add-button {
             color: $text;
             background: $accent;
             text-style: b;
         }
         Input {
-          background: $accent 20%;
+          background: $accent 10%;
         }
     }
-    dock: bottom;
-    height: auto;
-    width: 1fr;
-    & > Input {
+    & Input {
         border: none;
         width: 1fr;
-        margin-left: 1;
-        margin-right: 1;
+        border-left: wide $surface-lighten-1;
+        padding: 0;
         &:focus {
-            border: none;
-            padding: 0 1;
+          border: none;
+          border-left: wide $surface-lighten-1;
         }
     }
   
-    & > Button {
+    & Button {
         background: $primary;
         color: $text;
         text-style: none;
         min-width: 0;
         width: auto;
-        margin: 0 1;
         &:hover {
             text-style: b;
             padding: 0 1;
